Some spacing fixes for navigation

--- a/mtg/src/app/navigation/navigation.component.css
+++ b/mtg/src/app/navigation/navigation.component.css
@@ -1,11 +1,17 @@
 #navigation-container {
-    height: 10vh;
+    height: 20vh;
     width: 100vw;
 }
 
 #app-features {
     list-style-type: none;
+    box-sizing: border-box;
     display: flex;
+    margin: 10px;
+    margin-top: 50px;
+    margin-bottom: 25px;
+    height: 15vh;
+    height: 100%;
 }
 
 #play-button {
